# ml_hospital_readmission

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_1.txt  test.md  test_0.py  test_1.py
artifacts/: best_model.joblib  evaluation_report.json
config/: config.yaml
notebook/: best_lightgbm_model.joblib  notebooks.ipynb
src/: app.py  config.py  train.py
