[project]
name = "ml-hospital-readmission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "boto3>=1.40.74",
    "category-encoders>=2.9.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "imbalanced-learn>=0.14.0",
    "imblearn>=0.0",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "localstack-client>=2.10",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "svm>=0.1.0",
    "xgboost>=3.1.1",
]
